Pylint: added configuration and test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,6 @@ jobs:
       - name: Check formatting with black
         run: |
           black aioshelly --check
+      - name: Pylint review
+        run: |
+          pylint aioshelly
