--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,9 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install -r requirements-test.txt
+      - name: Isort check
+        run: |
+           pre-commit run --hook-stage manual isort --all-files --show-diff-on-failure
       - name: Lint with flake8
         run: |
           flake8 aioshelly
