Added isort profile

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,8 @@ ignore =
     W503,
     E203,
     D202
+
+[isort]
+# https://github.com/timothycrosley/isort
+# https://github.com/timothycrosley/isort/wiki/isort-Settings
+profile = black
