Fixed files name lookup

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -74,4 +74,4 @@ repos:
         language: script
         types: [python]
         require_serial: true
-        files: ^homeassistant/.+\.py$
+        files: ^aioshelly/.+\.py$
