Added pylint to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,6 +62,10 @@ repos:
     hooks:
       - id: prettier
         stages: [manual]
+  - repo: https://github.com/pre-commit/mirrors-pylint
+    rev: v2.6.0
+    hooks:
+      - id: pylint
   - repo: local
     hooks:
       # Run mypy through our wrapper script in order to get the possible
