Excluded future updates of devices.json + sort values

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 *.py[cod]
-lib
-bin
-pip-selfcheck.json
-pyvenv.cfg
-dist
-aioshelly.egg-info
 .DS_Store
 .idea
-venv
 .vscode
+aioshelly.egg-info
+bin
+devices.json
+dist
+lib
+pip-selfcheck.json
+pyvenv.cfg
+venv
