--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
         args:
           - --safe
           - --quiet
-        files: ^((homeassistant|script|tests)/.+)?[^/]+\.py$
+        files: ^(aioshelly/.+)?[^/]+\.py$
   - repo: https://github.com/codespell-project/codespell
     rev: v1.17.1
     hooks:
@@ -28,7 +28,7 @@ repos:
         additional_dependencies:
           - flake8-docstrings==1.5.0
           - pydocstyle==5.1.1
-        files: ^(homeassistant|script|tests)/.+\.py$
+        files: ^aioshelly/.+\.py$
   - repo: https://github.com/PyCQA/bandit
     rev: 1.6.2
     hooks:
@@ -37,7 +37,7 @@ repos:
           - --quiet
           - --format=custom
           - --configfile=tests/bandit.yaml
-        files: ^(homeassistant|script|tests)/.+\.py$
+        files: ^aioshelly/.+\.py$
   - repo: https://github.com/PyCQA/isort
     rev: 5.5.2
     hooks:
