--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,7 @@ repos:
         args:
           - --quiet
           - --format=custom
-          - --configfile=tests/bandit.yaml
+          - --configfile=bandit.yaml
         files: ^aioshelly/.+\.py$
   - repo: https://github.com/PyCQA/isort
     rev: 5.5.2
