--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,8 +1,9 @@
+black==21.6b0
 flake8==3.9.2
-black==21.8b0
-isort==5.9.3
-pylint==2.10.2
+isort==5.9.1
+mypy==0.910
+pylint==2.8.3
 pylint-strict-informational==0.1
 pre-commit==2.15.0
 requests
-mypy==0.910
+types-requests
