Add breaking change label to release drafter

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,7 @@
 categories:
+  - title: "⚠ Breaking Changes"
+    labels:
+      - "breaking-change"
   - title: "⬆️ Dependencies"
     collapse-after: 1
     labels:
