Drop Python 3.8 support & Update CI tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [flake8]
+exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
 # To work with Black
 max-line-length = 88
 # E501: line too long
@@ -15,3 +16,8 @@ ignore =
 # https://github.com/timothycrosley/isort
 # https://github.com/timothycrosley/isort/wiki/isort-Settings
 profile = black
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+line_length = 88
