--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,12 @@
 version: 2
 updates:
-  - package-ecosystem: pip
+  - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: weekly
+      interval: daily
+    open-pull-requests-limit: 10
+  - package-ecosystem: "pip"
+    directory: "/"  # Location of package manifests
+    schedule:
+      interval: "weekly"
     open-pull-requests-limit: 10
