--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies, run tests and lint
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Run Tests
+name: Test
 
 on:
   push:
@@ -12,29 +12,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version:
+          - "3.9"
+          - "3.10"
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
+      - uses: actions/checkout@v3.0.0
         with:
-          python-version: 3.8
+          fetch-depth: 2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3.1.1
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip install -r requirements-test.txt
-      - name: Isort check
-        run: |
-          pre-commit run --hook-stage manual isort --all-files --show-diff-on-failure
-      - name: Lint with flake8
-        run: |
-          flake8 aioshelly
-      - name: Check formatting with black
-        run: |
-          black aioshelly --check
-      - name: Pylint review
-        run: |
-          pylint aioshelly
-      - name: Mypy
-        run: |
-          mypy aioshelly
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions
+      - name: Test with tox
+        run: tox
