--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,14 @@
 repos:
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.7.2
+    rev: v2.31.0
     hooks:
       - id: pyupgrade
-        args: [--py37-plus]
-  - repo: https://github.com/psf/black
-    rev: 20.8b1
+        args: ["--py39-plus"]
+  - repo: https://github.com/ambv/black
+    rev: 21.12b0
     hooks:
       - id: black
+        language_version: python3
         args:
           - --safe
           - --quiet
@@ -22,13 +23,17 @@ repos:
           - --quiet-level=2
         exclude_types: [csv, json]
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 4.0.1
     hooks:
       - id: flake8
         additional_dependencies:
           - flake8-docstrings==1.5.0
-          - pydocstyle==5.1.1
         files: ^aioshelly/.+\.py$
+        args:
+          - --max-line-length=500
+          - --ignore=E203,E266,E501,W503
+          - --max-complexity=18
+          - --select=B,C,E,F,W,T4,B9
   - repo: https://github.com/PyCQA/bandit
     rev: 1.6.2
     hooks:
@@ -38,18 +43,33 @@ repos:
           - --format=custom
           - --configfile=bandit.yaml
         files: ^aioshelly/.+\.py$
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.5.2
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1
     hooks:
       - id: isort
+        args:
+          - --multi-line=3
+          - --trailing-comma
+          - --force-grid-wrap=0
+          - --use-parentheses
+          - --line-width=88
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.1.0
     hooks:
       - id: check-executables-have-shebangs
         stages: [manual]
       - id: no-commit-to-branch
         args:
           - --branch=main
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-docstring-first
+      - id: check-yaml
+      - id: debug-statements
+  - repo: https://github.com/PyCQA/pydocstyle
+    rev: 6.1.1
+    hooks:
+      - id: pydocstyle
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.24.2
     hooks:
@@ -59,16 +79,8 @@ repos:
     hooks:
       - id: prettier
         stages: [manual]
-  - repo: local
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.930"
     hooks:
-      # Run mypy through our wrapper script in order to get the possible
-      # pyenv and/or virtualenv activated; it may not have been e.g. if
-      # committing from a GUI tool that was not launched from an activated
-      # shell.
       - id: mypy
-        name: mypy
-        entry: script/run-in-env.sh mypy
-        language: script
-        types: [python]
-        require_serial: true
         files: ^aioshelly/.+\.py$
