--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py310, py311, lint, mypy
+envlist = py310, py311, py312, lint, mypy
 skip_missing_interpreters = True
 
 [gh-actions]
 python =
   3.10: py310, lint, mypy
   3.11: py311
+  3.12: py312
 
 [testenv:lint]
 basepython = python3
