--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,9 +10,7 @@ repos:
       - id: black
         language_version: python3
         args:
-          - --safe
-          - --quiet
-        files: ^(aioshelly/.+)?[^/]+\.py$
+          - --check
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.2
     hooks:
