--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
       - id: black
         language_version: python3
         args:
-          - --check
+          - --quiet
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.2
     hooks:
