Use ruff instead of pylint, black, isort, flake8 and bandit

--- a/tox.ini
+++ b/tox.ini
@@ -12,10 +12,8 @@ python =
 basepython = python3
 ignore_errors = True
 commands =
-  black --check ./
-  flake8 aioshelly
-  isort aioshelly
-  pylint aioshelly
+  ruff format --check ./
+  ruff check ./
   pydocstyle aioshelly
 deps =
   -rrequirements.txt
