--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,16 +19,15 @@
 				"terminal.integrated.shell.linux": "/bin/bash",
 				"python.pythonPath": "/usr/local/bin/python",
 				"python.languageServer": "Pylance",
-				"python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
-				"python.formatting.blackPath": "/usr/local/py-utils/bin/black",
-				"python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf"
+				"[python]": {
+                    "editor.defaultFormatter": "charliermarsh.ruff"
+                }
 			},
 		  "extensions":
 		   [
 			"ms-python.python",
 			"ms-python.vscode-pylance",
-			"ms-python.black-formatter",
-			"ms-python.pylint"
+			"charliermarsh.ruff"
 		   ]
 		}
 	},
