Add PLR2004 to ignore list

--- a/ruff.toml
+++ b/ruff.toml
@@ -18,6 +18,7 @@ lint.ignore = [
     "N818",     # Exception name should be named with an Error suffix
     "PLR0912",  # Too many branches
     "PLR0915",  # Too many statements
+    "PLR2004",  # Magic value used
     "TCH001",   # Move application import into a type-checking block
     "TCH002",   # Move third-party import into a type-checking block
     "TCH003",   # Move standard library import into a type-checking block
