--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py311, py312, lint, mypy
+envlist = py311, py312, lint, mypy, tests
 skip_missing_interpreters = True
 
 [gh-actions]
 python =
   3.11: py311, lint, mypy
-  3.12: py312
+  3.12: py312, tests
 
 [testenv:lint]
 basepython = python3
@@ -26,3 +26,12 @@ commands =
 deps =
   -rrequirements.txt
   -rrequirements_lint.txt
+
+[testenv:tests]
+basepython = python3
+ignore_errors = True
+commands =
+  python -m pytest --cov=aioshelly --cov-report=xml --cov-report=term-missing
+deps =
+  -rrequirements.txt
+  -rrequirements_dev.txt
