--- a/ruff.toml
+++ b/ruff.toml
@@ -5,6 +5,7 @@ lint.select = ["ALL"]
 lint.ignore = [
     "ANN101",   # Missing type annotation for `self` in method
     "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
+    "ASYNC109", # Async function definition with a `timeout` parameter
     "COM812",   # Trailing comma missing
     "D203",     # 1 blank line required before class docstring
     "D213",     # Multi-line docstring summary should start at the second line
