Add Python 3.13 to CI

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py311, py312, lint, mypy, tests
+envlist = py311, py312, py313, lint, mypy, tests
 skip_missing_interpreters = True
 
 [gh-actions]
 python =
   3.11: py311, lint, mypy
   3.12: py312, tests
+  3.13: py313, tests
 
 [testenv:lint]
 basepython = python3
