Fix ruff config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ lint.ignore = [
     "TRY003",   # Avoid specifying long messages outside the exception class
     "TRY400",   # Use `logging.exception` instead of `logging.error`
 ]
-[lint.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tools/*" = [
     "T201",      # `print` found
 ]
@@ -66,5 +66,5 @@ lint.ignore = [
     "SLF001",
 ]
 
-[lint.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 18
