--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,27 @@
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
+
+[tool.mypy]
+python_version = 3.11
+show_error_codes = true
+follow_imports = "silent"
+ignore_missing_imports = true
+strict_equality = true
+warn_incomplete_stub = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unused_ignores = true
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unreachable = true
+
+[tool.ruff]
 target-version = "py311"
 
 lint.select = ["ALL"]
@@ -26,7 +50,7 @@ lint.ignore = [
     "TRY003",   # Avoid specifying long messages outside the exception class
     "TRY400",   # Use `logging.exception` instead of `logging.error`
 ]
-[lint.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tools/*" = [
     "T201",      # `print` found
 ]
@@ -42,5 +66,5 @@ lint.ignore = [
     "SLF001",
 ]
 
-[lint.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 18
