--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,3 +68,34 @@ lint.ignore = [
 
 [tool.ruff.lint.mccabe]
 max-complexity = 18
+
+[tool.tox]
+envlist = ["py311", "py312", "py313", "lint", "mypy", "tests"]
+skip_missing_interpreters = true
+
+[tool.tox.gh-actions]
+python = { "3.11" = ["py311", "lint", "mypy"], "3.12" = ["py312", "tests"], "3.13" = ["py313", "tests"] }
+
+[tool.tox.testenv.lint]
+basepython = "python3"
+ignore_errors = true
+commands = [
+  "ruff format --check ./",
+  "ruff check ./",
+  "pydocstyle aioshelly"
+]
+deps = ["-rrequirements.txt", "-rrequirements_lint.txt"]
+
+[tool.tox.testenv.mypy]
+basepython = "python3"
+ignore_errors = true
+commands = ["mypy aioshelly"]
+deps = ["-rrequirements.txt", "-rrequirements_lint.txt"]
+
+[tool.tox.testenv.tests]
+basepython = "python3"
+ignore_errors = true
+commands = [
+  "python -m pytest --cov=aioshelly --cov-report=xml --cov-report=term-missing"
+]
+deps = ["-rrequirements.txt", "-rrequirements_dev.txt"]
