Do not install tox-gh-actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install uv tox tox-gh-actions tox-uv
+          pip install uv tox tox-uv
       - name: Test with tox
         run: tox
       - name: Upload coverage to Codecov
