--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ lint.ignore = [
     "TC001",   # Move application import into a type-checking block
     "TC002",   # Move third-party import into a type-checking block
     "TC003",   # Move standard library import into a type-checking block
+    "TC006",    # Add quotes to type expression in typing.cast()
     "TID252",   # Prefer absolute imports over relative imports from parent modules
     "TRY003",   # Avoid specifying long messages outside the exception class
     "TRY400",   # Use `logging.exception` instead of `logging.error`
