--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -21,6 +21,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install build twine
+      - name: Set package version
+        run: |
+            version="${{ github.event.release.tag_name }}"
+            sed -i "s/^version = \".*\"/version = \"${version}\"/" pyproject.toml
       - name: Build and publish
         env:
           TWINE_USERNAME: __token__
