Add tag and name template

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,3 +1,6 @@
+name-template: "Version $RESOLVED_VERSION"
+tag-template: "$RESOLVED_VERSION"
+
 categories:
   - title: "🚨 Breaking changes"
     label: "breaking-change"
