--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,23 @@ dependencies = [
   "yarl",
 ]
 
+[project.optional-dependencies]
+lint = [
+  "mypy==1.15.0",
+  "pydocstyle==6.3.0",
+  "ruff==0.11.5",
+  "types-requests",
+]
+dev = [
+  "aioresponses==0.7.8",
+  "pre-commit==4.2.0",
+  "pytest-asyncio==0.26.0",
+  "pytest-cov==6.1.1",
+  "pytest==8.3.5",
+  "requests",
+  "tox==4.25.0",
+]
+
 [project.urls]
 "Source code" = "https://github.com/home-assistant-libs/aioshelly"
 
@@ -120,8 +137,7 @@ commands =
   ruff check ./
   pydocstyle aioshelly
 deps =
-  -rrequirements.txt
-  -rrequirements_lint.txt
+  .[lint]
 
 [testenv:mypy]
 basepython = python3
@@ -129,8 +145,7 @@ ignore_errors = True
 commands =
   mypy aioshelly
 deps =
-  -rrequirements.txt
-  -rrequirements_lint.txt
+  .[lint]
 
 [testenv:tests]
 basepython = python3
@@ -138,6 +153,5 @@ ignore_errors = True
 commands =
   python -m pytest --cov=aioshelly --cov-report=xml --cov-report=term-missing
 deps =
-  -rrequirements.txt
-  -rrequirements_dev.txt
+  .[dev]
 """
