--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 ]
 dependencies = [
   "aiohttp>=3.11.1",
+  "bleak-retry-connector>=3.0.0",
   "bluetooth-data-tools>=1.28.0",
   "habluetooth>=3.42.0",
   "orjson>=3.8.1",
