--- a/.github/workflows/pre-commit-update.yml
+++ b/.github/workflows/pre-commit-update.yml
@@ -1,4 +1,4 @@
-name: Pre-commit auto-update
+name: Prek auto-update
 on:
   schedule:
     # Run on mondays at midnight
@@ -15,20 +15,20 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Install pre-commit
-        run: pip install pre-commit
+      - name: Install prek
+        run: pip install prek
 
-      - name: Run pre-commit autoupdate
-        run: pre-commit autoupdate
+      - name: Run prek auto-update
+        run: prek auto-update
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v8.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: update/pre-commit-autoupdate
-          title: Auto-update pre-commit hooks
-          commit-message: Auto-update pre-commit hooks
+          branch: update/prek-auto-update
+          title: Auto-update pre hooks
+          commit-message: Auto-update prek hooks
           body: |
-            Update versions of hooks in pre-commit
+            Update versions of hooks in prek
             configs to latest version
           labels: dependencies
