--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ lint = [
 ]
 dev = [
   "aioresponses==0.7.8",
-  "prek"==0.2.28,
+  "prek==0.2.28",
   "pytest-asyncio==1.3.0",
   "pytest-cov==7.0.0",
   "pytest==9.0.2",
