--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,7 +154,7 @@ commands =
     check-yaml \
     check-json \
     check-toml \
-    mixed-line-ending
+    mixed-line-ending --all-files
 deps =
   .[lint]
 
