--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -14,13 +14,13 @@ jobs:
     steps:
       - uses: actions/checkout@v6.0.1
       - name: Set up Python
-        uses: actions/setup-python@v6.2.0
+        uses: astral-sh/setup-uv@v7
         with:
+          enable-cache: true
+          activate-environment: true
           python-version: "3.x"
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build twine
+        run: uv pip install twine
       - name: Set package version
         run: |
             version="${{ github.event.release.tag_name }}"
@@ -30,5 +30,5 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          python -m build
+          uv build
           twine upload dist/*
