--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,14 +24,16 @@ jobs:
         with:
           fetch-depth: 2
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v6.2.0
+        uses: astral-sh/setup-uv@v7
         with:
+          enable-cache: true
+          activate-environment: true
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install uv tox tox-gh-actions tox-uv
+          uv pip install tox tox-gh-actions tox-uv
       - name: Test with tox
-        run: tox
+        run: uv run tox
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
