--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,9 +51,8 @@ repos:
     hooks:
       - id: prettier
         stages: [manual]
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.19.1"
+  - repo: https://github.com/NSPBot911/ty-pre-commit
+    rev: v0.0.13
     hooks:
-      - id: mypy
-        additional_dependencies: [types-orjson]
+      - id: ty-check
         files: ^aioshelly/.+\.py$
