--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,11 @@ dependencies = [
 
 [project.optional-dependencies]
 lint = [
-  "mypy==1.19.1",
   "prek==0.3.1",
   "pydocstyle==6.3.0",
   "ruff==0.14.14",
   "types-requests",
+  "ty==0.0.14",
 ]
 dev = [
   "aioresponses==0.7.8",
@@ -57,25 +57,8 @@ include = ["aioshelly*"]
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
 
-[tool.mypy]
-python_version = "3.11"
-show_error_codes = true
-follow_imports = "silent"
-ignore_missing_imports = true
-strict_equality = true
-warn_incomplete_stub = true
-warn_redundant_casts = true
-warn_unused_configs = true
-warn_unused_ignores = true
-check_untyped_defs = true
-disallow_incomplete_defs = true
-disallow_subclassing_any = true
-disallow_untyped_calls = true
-disallow_untyped_decorators = true
-disallow_untyped_defs = true
-no_implicit_optional = true
-warn_return_any = true
-warn_unreachable = true
+[tool.ty.environment]
+python-version = "3.11"
 
 [tool.ruff]
 target-version = "py311"
@@ -123,12 +106,12 @@ max-complexity = 18
 legacy_tox_ini = """
 
 [tox]
-envlist = py311, py312, py313, py314, lint, prek, mypy, tests
+envlist = py311, py312, py313, py314, lint, prek, ty, tests
 skip_missing_interpreters = True
 
 [gh-actions]
 python =
-  3.11: py311, lint, prek, mypy
+  3.11: py311, lint, prek, ty
   3.12: py312, tests
   3.13: py313, tests
   3.14: py314, tests
@@ -159,11 +142,11 @@ commands =
 deps =
   .[lint]
 
-[testenv:mypy]
+[testenv:ty]
 basepython = python3
 ignore_errors = True
 commands =
-  mypy aioshelly
+  ty check aioshelly
 deps =
   .[lint]
 
