--- a/.github/workflows/pre-commit-update.yml
+++ b/.github/workflows/pre-commit-update.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           enable-cache: true
           activate-environment: true
-          python-version: "3.x"
+          python-version: "3"
 
       - name: Install prek
         run: uv pip install prek
