--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           enable-cache: true
           activate-environment: true
-          python-version: "3.x"
+          python-version: "3"
       - name: Install dependencies
         run: uv pip install twine
       - name: Set package version
