Fix devcontainer for ty

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,11 +13,12 @@
         "vscode": {
             "settings": {
                 "terminal.integrated.shell.linux": "/bin/bash",
-                "python.pythonPath": "/usr/local/bin/python",
+                "python.pythonPath": "./venv/bin/python",
                 "python.languageServer": "Pylance",
                 "[python]": {
                     "editor.defaultFormatter": "charliermarsh.ruff"
-                }
+                },
+                "python.terminal.activateEnvInCurrentTerminal": true
             },
             "extensions": [
                 "ms-python.python",
